src/objects/Corresponding_Bill__c.object
<CustomObject>
    <fields>
        <fullName>Bill1_Title__c</fullName>
        <formula>text(Legislation1__r.Bill_Prefix__c) +  text(Legislation1__r.Bill_Number__c) + &quot;: &quot; + Legislation1__r.Bill_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill2_Title__c</fullName>
        <formula>text(Legislation2__r.Bill_Prefix__c) +  text(Legislation2__r.Bill_Number__c) + &quot;: &quot; + Legislation2__r.Bill_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legislation1__c</fullName>
        <label>Legislation1</label>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Corresponding Bills 1</relationshipLabel>
        <relationshipName>Corresponding_Bill</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legislation2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legislation2</label>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Corresponding Bills 2</relationshipLabel>
        <relationshipName>Corresponding_Bill2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Corresponding Bill</label>
    <nameField>
        <displayFormat>CorrLeg-{00000}</displayFormat>
        <label>Corresponding Bill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corresponding Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>